chore: formatting for requirements

--- a/code/bike-buyers-prediction.ipynb
+++ b/code/bike-buyers-prediction.ipynb
@@ -1441,6 +1441,58 @@
     "# Confirmamos el cambio\n",
     "print(df[['Education', 'Education_Rank']].head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73315240",
+   "metadata": {},
+   "source": [
+    "## Requerimientos\n",
+    "\n",
+    "1. ¿Cuánto es el promedio de ingresos de acuerdo con si la bicicleta fue comprada o no por el cliente?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9600b20f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5ee145",
+   "metadata": {},
+   "source": [
+    "2. ¿Cuánto es el promedio de ingresos según el estado civil del cliente?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31917725",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f16223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3. Crear una nueva variable llamado Con_hijos, dónde Si: Children > 0, No: Children=0, para los clientes que si tienen hijos ¿Cuánto es el promedio de hijos según el nivel educativo del cliente?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fecc94a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
